--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>SF 2007</title>
+  <title>SF2020 ~ Promising Future</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href="style/other.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
 <body>
   <div class="container">
     <div class="heading">
-	    <h1 class="title">SF07</h1>
+	    <h1 class="title">SF20</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -78,7 +78,7 @@
     </div>
       <hr />
       <p class="game-explanation">
-       Version: 2021.1.28 （Ver 4.0.0.0 冬正式版）<br />
+       Version: 2022.1.1 （Ver 6.0.0.0 冬季正式版）<br />
       <strong class="important">规则：</strong>使用<strong>上下左右键</strong>移动（触屏设备请直接滑动手指），相同的两个立绘合并后会变成<strong>新的立绘</strong>。
     <hr>
     <p>
