--- a/index_alter.html
+++ b/index_alter.html
@@ -2,11 +2,11 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>SF2020 ~ Promising Future</title>
+  <title>SF2020 ~ Alternate Future</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href="style/other.css" rel="stylesheet" type="text/css">
-  <link href="style/group1.css" rel="stylesheet" type="text/css">
+  <link href="style/group2.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <div class="heading">
-	    <h1 class="title">SF20</h1>
+	    <h1 class="title">SF21</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -90,7 +90,7 @@
     二次创作：<a href="https://github.com/perfectboy/">perfectboy</a>；
     原作：<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>。
     </p>
-	<p>二组戳→<a href="index_alter.html">SF21</a></p>
+	<p>一组戳→<a href="index.html">SF20</a></p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
@@ -100,11 +100,11 @@
   <script src="js/html_actuator.js"></script>
   <script src="js/grid.js"></script>
   <script src="js/tile.js"></script>
-  <script src="js/local_storage_manager.js"></script>
+  <script src="js/local_storage_manager1.js"></script>
   <script src="js/game_manager.js"></script>
   <script src="js/application.js"></script>
   <script>
-	  window.group = "Group1";
+	  window.group = "Group2";
 	  </script>
 </body>
 </html>
