泛灵论！狼刃学长！🐺🐺🐺

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" manifest="cache.appcache">
 <head>
   <meta charset="utf-8">
-  <title>SF2020 ~ Promising Future</title>
+  <title>Kemono Touhou ~ 研究生组</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href="style/other.css" rel="stylesheet" type="text/css">
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <div class="heading">
-	    <h1 class="title">SF20</h1>
+	    <h1 class="title">NEU</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">抛去12年的污秽，迎接大学生活。</p>
+      <p class="game-intro">狼刃学长！</p>
       <a class="restart-button">New Game</a>
     </div>
 
@@ -79,11 +79,11 @@
     </div>
       <hr />
 	  <div class = "current-status">
-		  <p class = "MaxNum">当前最大数：<span></span>（<span></span>）</p>
+		  <p class = "MaxNum">当前最大：<span></span></p>
 		  <p class = "Diffculty">难度：<span></span></p>
 	  </div>
       <p class="game-explanation">
-       Version: 2022.9.1<br />
+       Version: 2024<br />
       <strong class="important">规则：</strong>使用<strong>上下左右键</strong>移动（触屏设备请直接滑动手指），相同的两个立绘合并后会变成<strong>新的立绘</strong>。
     <hr>
     <p>
