--- a/index_alter.html
+++ b/index_alter.html
@@ -18,7 +18,7 @@
 
   <meta property="og:title" content="2048 game"/>
   <meta property="og:site_name" content="2048 game"/>
-  <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
+  <meta property="og:description" content="Going up big numbers with your skills! Welcome to 2048 world! Feel like to know 2048 verse!"/>
   <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
 </head>
 <body>
@@ -79,7 +79,7 @@
     </div>
       <hr />
 	  <div class = "current-status">
-		  <p class = "MaxNum">当前最大：<span></span></p>
+		  <p class = "MaxNum">当前最大：<span></span>[<span></span>]</p>
 		  <p class = "Diffculty">难度：<span></span></p>
 	  </div>
       <p class="game-explanation">
