我早就改名了哥们儿（

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <div class="heading">
-	    <h1 class="title">NEU</h1>
+	    <h1 class="title">Rouha</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -90,7 +90,7 @@
     二次创作：<a href="https://github.com/perfectboy/">perfectboy</a>；
     原作：<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>。
     </p>
-	<p>二组戳→<a href="index_alter.html">SF21</a></p>
+	<p>本科→<a href="index_alter.html">本科←</a></p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
