--- a/index_alter.html
+++ b/index_alter.html
@@ -24,7 +24,7 @@
 <body>
   <div class="container">
     <div class="heading">
-	    <h1 class="title">SUT</h1>
+	    <h1 class="title">Reimu</h1>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
@@ -90,7 +90,7 @@
     二次创作：<a href="https://github.com/perfectboy/">perfectboy</a>；
     原作：<a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli</a>。
     </p>
-	<p>一组戳→<a href="index.html">SF20</a></p>
+	<p>研究生→<a href="index.html">研究生←</a></p>
   </div>
 
   <script src="js/bind_polyfill.js"></script>
